<resources>
    <string name="app_name">YTLSC</string>
    <string name="appwidget_text">Loading…</string>
    <string name="add_widget">Add widget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="client_id">CLIENT ID</string>
    <string name="about_me_text"><b>Abhishek Panwar</b> is a tech enthusiast and someone who loves programming and technology. Apart from programming he loves to learn every sort of creative stuff. This app was made as a fun project to learn Android programming while making something useful. </string>
    <string name="note_contact_us">Note: The response might take 2 to 3 days to come but don\'t worry, your issue is our issue and we will try our best to resolve that.</string>
    <string name="searchMessage">Search result for \'%1$s\'</string>
    <string name="about_the_developer">About the Developer</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No Favorites</string>
    <string name="channel_name">Channel Name</string>
    <string name="subscriber_count">Subscriber Count</string>
    <string name="go_to_channel">Go to channel</string>
    <string name="subscribers">Subscribers</string>
    <string name="view_count">View Count</string>
    <string name="video_count">Video Count</string>
    <string name="tap_to_reload">Tap to Reload</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about_us">About us</string>
    <string name="communicate">Communicate</string>
    <string name="night_mode">Night Mode</string>
    <string name="github">Github</string>

    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>


</resources>
