<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_github"
                android:title="@string/github" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/icons8info48"
                android:title="@string/about_us" />

        </menu>
    </item>

</menu>
