<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    tools:context="com.abhishekpanwar.youtubelivesubscribercount.MainActivity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parentLayout">

        <RelativeLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/channelContainer"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/displayChannelArt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nobanner" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/nameContainer"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/channelContainer"
                android:background="?attr/cardbackgroundcolor"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/channelName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/channel_name"
                    android:textColor="?attr/textcolor"
                    android:textSize="22sp" />

                <LinearLayout
                    android:id="@+id/gotoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/channelName"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/playlogo"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/playlogo" />

                    <TextView
                        android:id="@+id/subscribeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/go_to_channel"
                        android:textAllCaps="true"
                        android:textColor="?attr/tintcoloricon"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Switch
                    android:id="@+id/switchFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="33dp"
                    android:layout_toRightOf="@id/channelName"
                    android:text="" />


            </RelativeLayout>

            <ImageView
                android:id="@+id/displayChannelImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@id/channelContainer"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-40dp"
                android:gravity="center"
                android:src="@drawable/profile"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18sp" />


            <RelativeLayout
                android:id="@+id/subscriberContainer"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/nameContainer"
                android:layout_marginEnd="-5dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:layout_marginStart="-5dp"
                android:background="@drawable/shadow"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="-5dp"
                        android:gravity="center"
                        android:text="@string/subscribers"
                        android:textAlignment="center"
                        android:textColor="?attr/tintcoloricon"
                        android:textSize="18sp" />

                    <com.robinhood.ticker.TickerView
                        android:id="@+id/tickerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Hello World!"
                        android:textAlignment="center"
                        android:textColor="?attr/textcolor"
                        android:textSize="50sp" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/viewContainer"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/subscriberContainer"
                android:layout_marginEnd="-5dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:layout_marginStart="-5dp"
                android:background="@drawable/shadow"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:src="@drawable/eyeicon"
                        android:tint="?attr/tintcoloricon" />

                    <TextView
                        android:id="@+id/displayViewCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/view_count"
                        android:textAlignment="center"
                        android:textColor="?attr/textcolor"
                        android:textSize="30sp" />

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/videosContainer"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/viewContainer"
                android:layout_marginEnd="-5dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:layout_marginStart="-5dp"
                android:background="@drawable/shadow"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="22dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:src="@drawable/videoicon"
                        android:tint="?attr/tintcoloricon" />

                    <TextView
                        android:id="@+id/displayVideoCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/video_count"
                        android:textAlignment="center"
                        android:textColor="?attr/textcolor"
                        android:textSize="30sp" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_reload"
            android:textSize="18sp"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="14dp"
            android:textColor="?attr/textcolorlight"
            android:id="@+id/tapReload"
            />

        <ProgressBar
            android:id="@+id/simpleProgressBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="visible" />

    </RelativeLayout>

</ScrollView>
